Enhance flight tracking with WebSocket support and improve flight info resolution